<resources>
    <string name="app_name">Parcial 2</string>
    <string name="add_event">Añadir Evento</string>
    <string name="change_language">Cambiar Idioma</string>
    <string name="event_name">Nombre del Evento</string>
    <string name="event_description">Descripción</string>
    <string name="event_address">Dirección</string>
    <string name="event_price">Precio</string>
    <string name="event_date">Fecha</string>
    <string name="event_capacity">Aforo</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string-array name="dias_array">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
</resources>