<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name" />

        <EditText
            android:id="@+id/edtEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_description" />

        <EditText
            android:id="@+id/edtEventAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_address" />

        <EditText
            android:id="@+id/edtEventPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edtEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_date" />

        <EditText
            android:id="@+id/edtEventCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_capacity"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>
</ScrollView>
