<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Imagen del evento -->
    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@android:drawable/ic_menu_gallery" />

    <!-- Detalles del evento -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEventPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_price"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
